--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -53,16 +53,16 @@ eleventyNavigation:
                 <picture class="cs-picture cs-picture1">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/assets/images/cabinets2-m.jpg"
+                        srcset="/assets/images/10.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/assets/images/cabinets2.jpg"
+                        srcset="/assets/images/10.jpg"
                     />
                     <img
                         aria-hidden="true"
                         decoding="async"
-                        src="/assets/images/cabinets2.jpg"
+                        src="/assets/images/10.jpg"
                         alt="cabinets"
                         loading="lazy"
                         width="400"
@@ -72,16 +72,16 @@ eleventyNavigation:
                 <picture class="cs-picture cs-picture2">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/assets/images/construction-m.jpg"
+                        srcset="/assets/images/house.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/assets/images/construction.jpg"
+                        srcset="/assets/images/house.jpg"
                     />
                     <img
                         aria-hidden="true"
                         decoding="async"
-                        src="/assets/images/construction.jpg"
+                        src="/assets/images/house.jpg"
                         alt="house"
                         loading="lazy"
                         width="400"
@@ -92,29 +92,20 @@ eleventyNavigation:
             <!-- Right Content Section-->
             <div class="cs-right">
                 <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About Company Title</h2>
+                <h2 class="cs-title">About E&D Renovations</h2>
                 <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent
-                    Class officelan nonatoureanor mauris laoreet, iaculis libero
-                    quis. Curabitur et tempus eri consequat tincidunt turpis sit
-                    amet imperdiet. Praesent nonatourean olei aptent taciti
-                    sociosqu ad litora torquent per.
+                    E&D Renovations is a licensed and insured general contracting company committed to delivering high-quality craftsmanship with honesty and professionalism. With years of experience in residential and commercial construction, we specialize in renovations, custom builds, and property improvements tailored to your needs.
                 </p>
                 <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent
-                    Class officelan nonatoureanor mauris laoreet, iaculis libero
-                    quis. Curabitur et tempus eri consequat tincidunt turpis sit
-                    amet imperdiet. Praesent nonatourean olei aptent taciti
-                    sociosqu ad litora torquent per.
+                    What sets us apart is our team of specialized crews—each highly skilled in their trade. From expert flooring crews to professional painters, carpenters, and more, we bring in the right team for every phase of your project to ensure precision and efficiency.
                 </p>
+                <p class="cs-text"> Whether you're remodeling a kitchen, building an addition, or refreshing your interiors, we work with care, clear communication, and attention to detail to bring your vision to life—on time and within budget.</p>
                 <div class="cs-flex-group">
                     <p class="cs-flex-p">
-                        In consequat tincidunt turpis sit amet imperdiet.
-                        Praesent Classei consequat tincidunt turpis sit amet
-                        imperdiet for mind.
+                        At E&D Renovations, your satisfaction is our top priority. From concept to completion, we’re here to build with integrity and deliver results that last.
                     </p>
-                    <span class="cs-name">Justin Time</span>
-                    <span class="cs-job">CEO-Founder</span>
+                    <span class="cs-name">DARDAN DULENIKU</span>
+                    <span class="cs-job">Founder & General Contractor</span>
                     <img
                         class="cs-quote-icon"
                         loading="lazy"
@@ -125,7 +116,7 @@ eleventyNavigation:
                         height="77"
                     />
                 </div>
-                <a href="/projects" class="cs-button-solid">Our Projects</a>
+                <!-- <a href="/projects" class="cs-button-solid">Our Projects</a> -->
             </div>
         </div>
     </section>
