--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -25,16 +25,16 @@ eleventyNavigation:
         <picture>
             <source
                 media="(max-width: 600px)"
-                srcset="/assets/images/cabinets2-m.jpg"
+                srcset="/assets/images/3.jpg"
             />
             <source
                 media="(min-width: 601px)"
-                srcset="/assets/images/cabinets2.jpg"
+                srcset="/assets/images/3.jpg"
             />
             <img
                 aria-hidden="true"
                 decoding="async"
-                src="/assets/images/cabinets2.jpg"
+                src="/assets/images/3.jpg"
                 alt="kitchen cabinets"
                 loading="eager"
                 width="2500"
