--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: "Pixel Perfect Websites | Code Stitch Web Designs | Denver, CO"
-description: "Meta description for the page"
+title: "E&D Renovations"
+description: "E&D Renovations is a licensed and insured general contracting company committed to delivering high-quality craftsmanship with honesty and professionalism."
 preloadImg: "/assets/images/interior2.jpg"
 permalink: "/"
 tags: "sitemap" # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
@@ -81,7 +81,7 @@ eleventyNavigation:
     <section id="hero">
         <div class="cs-container">
             <div class="cs-flex-group">
-                <span class="cs-topper">Licensed & insured contracting services</span>
+                <span class="cs-topper">Licensed & insured <br>contracting services in New York</span>
                 <h1 class="cs-title">E&D RENOVATIONS</h1>
                 <p class="cs-text">
                     At E&D Renovations, we bring your vision to life with expert craftsmanship and reliable service. Licensed and insured, we handle residential and commercial renovations, custom builds, and more—delivering quality results on time and on budget.
