--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,7 +1,7 @@
 ---
-title: "About | Code Stitch Web Designs"
-description: "Meta description for the page"
-preloadImg: "/assets/images/cabinets2.jpg"
+title: "About E&D Renovations"
+description: "E&D Renovations is a licensed and insured general contracting company committed to delivering high-quality craftsmanship with honesty and professionalism."
+preloadImg: "/assets/images/interior-2.jpg"
 permalink: "about/"
 eleventyNavigation:
     key: About Us
