--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -6,120 +6,90 @@ permalink: "about/"
 eleventyNavigation:
     key: About Us
     order: 200
+layout: layouts/base.html
 ---
 
-{% extends "layouts/base.html" %}
+<link rel="stylesheet" href="/assets/css/about.css" />
 
-{% block head %}
-    <link rel="stylesheet" href="/assets/css/about.css" />
-{% endblock %}
+<section id="int-hero">
+    <h1 id="home-h">About Us</h1>
+    <picture>
+        <source media="(max-width: 600px)" srcset="/assets/images/2.jpg" />
+        <source media="(min-width: 601px)" srcset="/assets/images/2.jpg" />
+        <img
+            aria-hidden="true"
+            decoding="async"
+            src="/assets/images/2.jpg"
+            alt="kitchen cabinets"
+            loading="eager"
+            width="2500"
+            height="1667"
+        />
+    </picture>
+</section>
 
-{% block body %}
-    <!-- ============================================ -->
-    <!--                    LANDING                   -->
-    <!-- ============================================ -->
-
-    <section id="int-hero">
-        <h1 id="home-h">About Us</h1>
-        <picture>
-            <source
-                media="(max-width: 600px)"
-                srcset="/assets/images/2.jpg"
-            />
-            <source
-                media="(min-width: 601px)"
-                srcset="/assets/images/2.jpg"
-            />
-            <img
-                aria-hidden="true"
-                decoding="async"
-                src="/assets/images/2.jpg"
-                alt="kitchen cabinets"
-                loading="eager"
-                width="2500"
-                height="1667"
-            />
-        </picture>
-    </section>
-
-    <!-- ============================================ -->
-    <!--                 Side By Side                 -->
-    <!-- ============================================ -->
-
-    <section id="sbs">
-        <div class="cs-container">
-            <!-- Left Image Section -->
-            <div class="cs-left">
-                <picture class="cs-picture cs-picture1">
-                    <source
-                        media="(max-width: 600px)"
-                        srcset="/assets/images/10.jpg"
-                    />
-                    <source
-                        media="(min-width: 601px)"
-                        srcset="/assets/images/10.jpg"
-                    />
-                    <img
-                        aria-hidden="true"
-                        decoding="async"
-                        src="/assets/images/10.jpg"
-                        alt="cabinets"
-                        loading="lazy"
-                        width="400"
-                        height="563"
-                    />
-                </picture>
-                <picture class="cs-picture cs-picture2">
-                    <source
-                        media="(max-width: 600px)"
-                        srcset="/assets/images/house.jpg"
-                    />
-                    <source
-                        media="(min-width: 601px)"
-                        srcset="/assets/images/house.jpg"
-                    />
-                    <img
-                        aria-hidden="true"
-                        decoding="async"
-                        src="/assets/images/house.jpg"
-                        alt="house"
-                        loading="lazy"
-                        width="400"
-                        height="563"
-                    />
-                </picture>
-            </div>
-            <!-- Right Content Section-->
-            <div class="cs-right">
-                <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About E&D Renovations</h2>
-                <p class="cs-text">
-                    E&D Renovations is a licensed and insured general contracting company committed to delivering high-quality craftsmanship with honesty and professionalism. With years of experience in residential and commercial construction, we specialize in renovations, custom builds, and property improvements tailored to your needs.
+<section id="sbs">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <div class="cs-left">
+            <picture class="cs-picture cs-picture1">
+                <source media="(max-width: 600px)" srcset="/assets/images/10.jpg" />
+                <source media="(min-width: 601px)" srcset="/assets/images/10.jpg" />
+                <img
+                    aria-hidden="true"
+                    decoding="async"
+                    src="/assets/images/10.jpg"
+                    alt="cabinets"
+                    loading="lazy"
+                    width="400"
+                    height="563"
+                />
+            </picture>
+            <picture class="cs-picture cs-picture2">
+                <source media="(max-width: 600px)" srcset="/assets/images/house.jpg" />
+                <source media="(min-width: 601px)" srcset="/assets/images/house.jpg" />
+                <img
+                    aria-hidden="true"
+                    decoding="async"
+                    src="/assets/images/house.jpg"
+                    alt="house"
+                    loading="lazy"
+                    width="400"
+                    height="563"
+                />
+            </picture>
+        </div>
+        <!-- Right Content Section-->
+        <div class="cs-right">
+            <span class="cs-topper">About Us</span>
+            <h2 class="cs-title">About E&D Renovations</h2>
+            <p class="cs-text">
+                E&D Renovations is a licensed and insured general contracting company committed to delivering high-quality craftsmanship with honesty and professionalism. With years of experience, [...]
+            </p>
+            <p class="cs-text">
+                What sets us apart is our team of specialized crews—each highly skilled in their trade. From expert flooring crews to professional painters, carpenters, and more, we bring innovation [...]
+            </p>
+            <p class="cs-text">
+                Whether you're remodeling a kitchen, building an addition, or refreshing your interiors, we work with care, clear communication, and attention to detail to bring your vision to life.
+            </p>
+            <div class="cs-flex-group">
+                <p class="cs-flex-p">
+                    At E&D Renovations, your satisfaction is our top priority. From concept to completion, we’re here to build with integrity and deliver results that last.
                 </p>
-                <p class="cs-text">
-                    What sets us apart is our team of specialized crews—each highly skilled in their trade. From expert flooring crews to professional painters, carpenters, and more, we bring in the right team for every phase of your project to ensure precision and efficiency.
-                </p>
-                <p class="cs-text"> Whether you're remodeling a kitchen, building an addition, or refreshing your interiors, we work with care, clear communication, and attention to detail to bring your vision to life—on time and within budget.</p>
-                <div class="cs-flex-group">
-                    <p class="cs-flex-p">
-                        At E&D Renovations, your satisfaction is our top priority. From concept to completion, we’re here to build with integrity and deliver results that last.
-                    </p>
-                    <span class="cs-name">DARDAN DULENIKU</span>
-                    <span class="cs-job">Founder & General Contractor</span>
-                    <img
-                        class="cs-quote-icon"
-                        loading="lazy"
-                        decoding="async"
-                        src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
-                        alt="gavel"
-                        width="136"
-                        height="77"
-                    />
-                </div>
-                <!-- <a href="/projects" class="cs-button-solid">Our Projects</a> -->
+                <span class="cs-name">DARDAN DULENIKU</span>
+                <span class="cs-job">Founder & General Contractor</span>
+                <img
+                    class="cs-quote-icon"
+                    loading="lazy"
+                    decoding="async"
+                    src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
+                    alt="gavel"
+                    width="136"
+                    height="77"
+                />
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    {% include 'components/cta.html' %}
-{% endblock %}
+{% include 'components/cta.html' %}
