--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -102,7 +102,7 @@ eleventyNavigation:
                 <p class="cs-text"> Whether you're remodeling a kitchen, building an addition, or refreshing your interiors, we work with care, clear communication, and attention to detail to bring your vision to life—on time and within budget.</p>
                 <div class="cs-flex-group">
                     <p class="cs-flex-p">
-                        At E&D Renovations, your satisfaction is our top priority. From concept to completion, we’re here to build with integrity and deliver results that last.
+                        At E&D Renovations, your satisfaction is our top priority. From concept to completion, we're here to build with integrity and deliver results that last.
                     </p>
                     <span class="cs-name">DARDAN DULENIKU</span>
                     <span class="cs-job">Founder & General Contractor</span>
